<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FilterForget</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="order_filter">Order Filter</string>
    <string name="add_filter">Add Filter</string>
    <string name="delete_filter">Delete Filter</string>
    <string name="update_user">Update User</string>
    <string name="cancel">Cancel</string>
    <string name="continuation">Continue</string>
    <string name="select_prompt">Select filter</string>
    <string name="height_prompt">Choose a height (inches)</string>
    <string name="length_prompt">Choose a length (inches)</string>
    <string name="test">Test</string>
    <string name="finalize">Finalize Order</string>
    <string name="total">Total: </string>
    <string name="name">Name/Address</string>
    <string name="nameFirst">First Name:</string>
    <string name="nameLast">Last Name:</string>
    <string name="address">Address:</string>
    <string name="city">City:</string>
    <string name="state">State:</string>
    <string name="zipcode">Zip Code:</string>
    <string name="credit_cards">Credit Cards</string>
    <string name="add_card">Add New Card</string>
    <string name="card_info">Credit Card Info</string>
    <string name="number">Number</string>
    <string name="expDate">Expiration Date</string>
    <string name="edit_info">Edit Personal Info</string>
    <string name="personal_info">Personal Info</string>
    <string name="back">Back</string>
    <string name="add_order_date">Filter Order Date</string>
    <string name="radio_specific_date">Order Date</string>
    <string name="radio_repeat_date">Repeat Date</string>
    <string name="date_prompt">Pick Date</string>
    <string name="order_specific_date">Choose Specific Date</string>
    <string name="order_week">Week</string>
    <string name="order_day">Day</string>

    <string-array name="filter_array">
        <item>Discount - 7.95</item>
        <item>Select - 10.95</item>
        <item>Deluxe - 15.95</item>
    </string-array>
    <string-array name="length_array">
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
    </string-array>

    <string name="width_prompt">Choose a width (inches)</string>

    <string-array name="width_array">
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
    </string-array>
    <string-array name="height_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="date_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
    </string-array>
    <string-array name="week_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="day_array">
        <item>Monday</item>
        <item>Teusday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <color name="green">#60C160</color>

</resources>