<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/name"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/nameFirst" />

            <TextView
                android:id="@+id/nameFirst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/nameLast" />

            <TextView
                android:id="@+id/nameLast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/address" />

            <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/city" />

            <TextView
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/state" />

            <TextView
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/zipcode" />

            <TextView
                android:id="@+id/zipcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp" />
        </LinearLayout>

        <Button
            android:id="@+id/button_edit_info"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/edit_info" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/credit_cards"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/list_cards"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/button_add_card"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/add_card" >
    </Button>

    <Button
        android:id="@+id/button_add_order_date"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/add_order_date" >
    </Button>

</LinearLayout>