<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/nameFirst" />

        <EditText
            android:id="@+id/nameFirstAdd"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/nameLast" />

        <EditText
            android:id="@+id/nameLastAdd"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/address" />

        <EditText
            android:id="@+id/addressAdd"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/city" />

        <EditText
            android:id="@+id/cityAdd"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/state" />

        <EditText
            android:id="@+id/stateAdd"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/zipcode" />

        <EditText
            android:id="@+id/zipcodeAdd"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonAddInfo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_card" />

        <Button
            android:id="@+id/buttonAddInfoCancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>