<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/radio_date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/radio_specific_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_specific_date" />

        <RadioButton
            android:id="@+id/radio_repeat_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_repeat_date" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_order_date" />

    <Spinner
        android:id="@+id/spinner_pick_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/width_array"
        android:prompt="@string/date_prompt" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_order_date" />

    <Spinner
        android:id="@+id/spinner_pick_repeat_week"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/width_array"
        android:prompt="@string/date_prompt" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_order_date" />

    <Spinner
        android:id="@+id/spinner_pick_repeat_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/width_array"
        android:prompt="@string/date_prompt" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonAddDate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_order_date" />

        <Button
            android:id="@+id/buttonAddDateCancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>