<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Simple Name"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/filterName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Length"
            android:textColor="#ffffff" />

        <Spinner
            android:id="@+id/spinnerFilterLength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/length_array"
            android:prompt="@string/length_prompt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Width"
            android:textColor="#ffffff" />

        <Spinner
            android:id="@+id/spinnerFilterWidth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/width_array"
            android:prompt="@string/width_prompt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Height"
            android:textColor="#ffffff" />

        <Spinner
            android:id="@+id/spinnerFilterHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/height_array"
            android:prompt="@string/height_prompt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonFilterOk"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_filter" >
        </Button>

        <Button
            android:id="@+id/buttonFilterCancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" >
        </Button>
    </LinearLayout>

</LinearLayout>